# PWDriver

./: .travis.yml  EventListener.py  LICENSE  Logger.py  README.md  WebDriverFactory.py  config.ini  core.py  listener.py  pyproject.toml  requirements.txt  setup.py  util.py  val.py
.github/: dependabot.yml
.github/workflows/: fossa_license.yml  python_release.yml  python_test.yml
org/dove/tissue/: CustomWebDriverEventListener.py  TestTemplate.py  WebDriverFactory.py  config.ini
pwdriver/: core.py  listener.py  page.py  util.py  val.py
pydriver/: core.py  listener.py  util.py  val.py
tests/: TestTemplate.py  chrome.py  config.ini  edge.py  eventdriver.py  firefox.py  ie.py  mobile_web.py  page_object.py  safari.py
tests/pages/: bing_page.py
